{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 79,
  "lineage": "abb41417-bf16-cc00-6a38-27385277d2da",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "tg-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:488815747857:security-group/sg-0962fe218bc2def6c",
            "description": "launch-wizard-1 created 2019-11-15T21:03:48.380+01:00",
            "filter": null,
            "id": "sg-0962fe218bc2def6c",
            "name": "linux-tg",
            "tags": {
              "Name": "tg-sg"
            },
            "vpc_id": "vpc-178c6e7d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:488815747857:loadbalancer/Terraform-elb",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b",
              "eu-central-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "Terraform-elb-1507859751.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "Terraform-elb",
            "idle_timeout": 60,
            "instances": [
              "i-06c053472a56b87ae",
              "i-0cf92098b1e5707fe"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Terraform-elb",
            "security_groups": [
              "sg-0bc9fe08a69c80d53"
            ],
            "source_security_group": "488815747857/sg_elb",
            "source_security_group_id": "sg-0bc9fe08a69c80d53",
            "subnets": [
              "subnet-0fabaa72",
              "subnet-1005cf7a",
              "subnet-f4998db9"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_instance.server1",
            "aws_instance.server2",
            "aws_security_group.sg_elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4c3eabb9e72650a",
            "arn": "arn:aws:ec2:eu-central-1:488815747857:instance/i-0cf92098b1e5707fe",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cf92098b1e5707fe",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-tg-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-031b928151916f3d0",
            "private_dns": "ip-172-31-43-213.eu-central-1.compute.internal",
            "private_ip": "172.31.43.213",
            "public_dns": "ec2-18-196-232-59.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.196.232.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ef129f9d396d403e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "linux-tg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fabaa72",
            "tags": {
              "Name": "server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0962fe218bc2def6c"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4c3eabb9e72650a",
            "arn": "arn:aws:ec2:eu-central-1:488815747857:instance/i-06c053472a56b87ae",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06c053472a56b87ae",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-tg-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0446a037521174ee7",
            "private_dns": "ip-172-31-40-73.eu-central-1.compute.internal",
            "private_ip": "172.31.40.73",
            "public_dns": "ec2-35-158-97-21.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.158.97.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-058ecddf4ad01306d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "linux-tg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fabaa72",
            "tags": {
              "Name": "server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0962fe218bc2def6c"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:488815747857:security-group/sg-0bc9fe08a69c80d53",
            "description": "ELB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc9fe08a69c80d53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_elb",
            "name_prefix": null,
            "owner_id": "488815747857",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-178c6e7d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:488815747857:security-group/sg-002ddf5b26a2c1102",
            "description": "Web security group",
            "egress": [],
            "id": "sg-002ddf5b26a2c1102",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_web",
            "name_prefix": null,
            "owner_id": "488815747857",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-178c6e7d"
          }
        }
      ]
    }
  ]
}